# truthlens-app

./: package-lock.json
backend/: README.md  pyproject.toml
backend/app/: main.py
docs/: blueprint.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/analyze/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/analysis/: results-panel.tsx  upload-zone.tsx
src/components/landing/: crisis-section.tsx  cta-section.tsx  feature-showcase-section.tsx  hero.tsx  how-it-works-section.tsx  magnifying-glass.tsx
src/components/layout/: footer.tsx  header.tsx
src/components/ui/: progress.tsx
src/lib/: placeholder-images.json
