[project]
name = "truthlens-api"
version = "0.1.0"
description = "FastAPI backend for Truthlens"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
]

[project.scripts]
serve = "uvicorn:main"

[tool.uvicorn]
app = "backend.app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
